# tam-workflow

./: .api_access_request.md.kate-swp  .dockerignore  .env.example  .gitignore  AGENDA_GENERATION.md  ARCHITECTURE.md  AUTH.md  DECISIONS.md  Dockerfile  PLAN.md  TASKS.md  alembic.ini  api_access_request.md  claude.md  conda-env.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_oauth_app_configs.py  003_add_action_item_linear_fields.py  004_add_avoma_integration.py  005_add_app_settings.py  006_add_quarterly_cadence.py
src/api/: main.py  schemas.py
src/api/routes/: approvals.py  auth.py  calendar.py  customers.py  dashboard.py  health.py  integrations.py  linear.py  resolve.py  scheduler.py  slack.py  transcripts.py  workflows.py
src/config/: logging.py  settings.py
src/content/: generator.py
src/integrations/: base.py  encryption.py  oauth_helpers.py  url_parsers.py
src/integrations/avoma/: __init__.py  client.py  matching.py
src/integrations/google/: __init__.py  calendar.py  docs.py  drive.py
src/integrations/linear/: __init__.py  client.py
src/integrations/notion/: client.py  (+1 more)
src/models/: __init__.py  app_settings.py  base.py  customer.py  database.py  integration.py  oauth_config.py  workflow.py
src/orchestrator/: scheduler.py  state_machine.py  workflows.py
src/transcript/: parser.py
tests/: conftest.py  test_api_approvals.py  test_api_customers.py  test_api_dashboard.py  test_api_integrations.py  test_encryption.py  test_state_machine.py  test_transcript_parser.py
web/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
(+28 files in other folders)
